# cmake_demo

./: cmake问题汇总.docx
cmake_learn/test_android/install/: build.sh
cmake_learn/test_android/source/: mytest.c  mytest.h.in
cmake_learn/test_android/source/arm64-v8a/: CMakeLists.txt
cmake_learn/test_android/source/armeabi/: CMakeLists.txt
cmake_learn/test_android/source/armv7_neon/: CMakeLists.txt
cmake_learn/test_android/source/armv7_vfpv3/: CMakeLists.txt
cmake_learn/test_android/source/mips/: CMakeLists.txt
cmake_learn/test_android/source/mips64/: CMakeLists.txt
cmake_learn/test_android/source/x86/: CMakeLists.txt
cmake_learn/test_android/source/x86-64/: CMakeLists.txt
cmake_learn/test_ctest/source/: CMakeLists.txt  test1.c  test2.c
cmake_learn/test_exec/source/: CMakeLists.txt  mytest.c
cmake_learn/test_file/source/: CMakeLists.txt
cmake_learn/test_ifelse/install/: build.sh
cmake_learn/test_ifelse/source/: CMakeLists.txt
cmake_learn/test_libs/source/: CMakeLists.txt
cmake_learn/test_link/source/: CMakeLists.txt  myapp.c
cmake_learn/test_loop/source/: CMakeLists.txt
cmake_learn/test_module/install/: build.sh
cmake_learn/test_module/source/: CMakeLists.txt  mytestConfig.h.in
cmake_learn/test_module/source/modules/: Findand_x86.cmake  Findand_x86_64.cmake  Findarm64_v8a.cmake  Findarmeabi.cmake  Findarmv7_neon.cmake  Findarmv7_vfpv3.cmake  Findmips.cmake  Findmips64.cmake
